# self-update-example

binary/: Cargo.toml
binary/src/: main.rs
downstream/: Cargo.toml  Config.toml
