[package]
name = "self-update-example"
version = "0.1.0"
edition = "2018"

[dependencies]
# utf-8 paths
camino = "1.0.5"
# error handling (similar to anyhow, I'm just trying out eyre here)
color-eyre = "0.5.11"
# process execution
duct = "0.13.5"
# for deserializing Config.toml
serde = { version = "1.0.130", features = ["derive"] }
serde_with = "1.10.0"
toml = "0.5.8"
# for updates
self_update = "0.27.0"
# for version requirement matching
semver = { version = "1.0.4", features = ["serde"] }
# for command parsing
structopt = "0.3.23"
